@@ -2,6 +2,12 @@
 (unreleased)
 ============
 
+Plugins
+-------
+
+  o BREAKING CHANGE: pip element plugin has been moved to the
+    bst-plugins-experimental repository.
+
 
 ==================
 buildstream 1.93.0
